--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -84,16 +84,16 @@ scrolling:
 # Font configuration (changes require restart)
 font:
   normal:
-    family: Hack Nerd Font
+    family: JetbrainsMono Nerd Font
     style: Regular
   bold:
-    family: Hack Nerd Font
+    family: JetbrainsMono Nerd Font
     style: Bold
   italic:
-    family: Hack Nerd Font
+    family: JetbrainsMono Nerd Font
     style: Italic
   bold_italic:
-    family: Hack Nerd Font
+    family: JetbrainsMono Nerd Font
     style: Bold Italic
 
   # The `style` can be specified to pick a specific face.
@@ -157,14 +157,14 @@ font:
   # style: Bold Italic
 
   # Point size of the font
-  size: 14.0
+  size: 13.0
 
   # Offset is the extra space around each character. offset.y can be
   # thought of as modifying the linespacing, and offset.x as modifying the
   # letter spacing.
-  #offset:
-  #  x: 0
-  #  y: 1
+  offset:
+    x: 1
+    y: 1
 
   # Glyph offset determines the locations of the glyphs within their cells
   # with the default being at the bottom. Increase the x offset to move
@@ -187,51 +187,51 @@ colors:
   # Default colors
   primary:
     # hard contrast: background = '0x1d2021'
-    background: '0x002b36'
-    foreground: '0x839496'
+    background: "0x002b36"
+    foreground: "0x839496"
 
   # Normal colors
   normal:
-    black: '0x073642'
-    red: '0xdc322f'
-    green: '0x859900'
-    yellow: '0xb58900'
-    blue: '0x268bd2'
-    magenta: '0xd33682'
-    cyan: '0x2aa198'
-    white: '0xeee8d5'
+    black: "0x073642"
+    red: "0xdc322f"
+    green: "0x859900"
+    yellow: "0xb58900"
+    blue: "0x268bd2"
+    magenta: "0xd33682"
+    cyan: "0x2aa198"
+    white: "0xeee8d5"
 
   # Bright colors
   bright:
-    black: '0x002b36'
-    red: '0xcb4b16'
-    green: '0x586e75'
-    yellow: '0x657b83'
-    blue: '0x839496'
-    magenta: '0x6c71c4'
-    cyan: '0x93a1a1'
-    white: '0xfdf6e3'
+    black: "0x002b36"
+    red: "0xcb4b16"
+    green: "0x586e75"
+    yellow: "0x657b83"
+    blue: "0x839496"
+    magenta: "0x6c71c4"
+    cyan: "0x93a1a1"
+    white: "0xfdf6e3"
   cursor:
-    text: '0xffffff'
-    cursor: '0x4d4d4c'
+    text: "0xffffff"
+    cursor: "0x4d4d4c"
 
   # Normal colors
   dim:
-    black: '0x232323'
-    red: '0x74423f'
-    green: '0x5e6547'
-    yellow: '0x8b7653'
-    blue: '0x556b79'
-    magenta: '0x6e4962'
-    cyan: '0x5c8482'
-    white: '0x828282'
+    black: "0x232323"
+    red: "0x74423f"
+    green: "0x5e6547"
+    yellow: "0x8b7653"
+    blue: "0x556b79"
+    magenta: "0x6e4962"
+    cyan: "0x5c8482"
+    white: "0x828282"
   indexed_colors:
-    - {index: 16, color: '0xaf3a03'}
-    - {index: 17, color: '0xd65d0e'}
-    - {index: 18, color: '0xebdbb2'}
-    - {index: 19, color: '0xd5c4a1'}
-    - {index: 20, color: '0x665c54'}
-    - {index: 21, color: '0x3c3836'}
+    - { index: 16, color: "0xaf3a03" }
+    - { index: 17, color: "0xd65d0e" }
+    - { index: 18, color: "0xebdbb2" }
+    - { index: 19, color: "0xd5c4a1" }
+    - { index: 20, color: "0x665c54" }
+    - { index: 21, color: "0x3c3836" }
 
 # Key bindings
 #
@@ -327,61 +327,61 @@ colors:
 #   - AppKeypad
 #
 key_bindings:
-  - {key: P, mods: Control, action: Paste}
-  - {key: Y, mods: Control, action: Copy}
-  - {key: Insert, mods: Shift, action: PasteSelection}
-  - {key: Key0, mods: Control, action: ResetFontSize}
-  - {key: Plus, mods: Control, action: IncreaseFontSize}
-  - {key: Equals, mods: Control, action: IncreaseFontSize}
-  - {key: Minus, mods: Control, action: DecreaseFontSize}
+  - { key: P, mods: Control, action: Paste }
+  - { key: Y, mods: Control, action: Copy }
+  - { key: Insert, mods: Shift, action: PasteSelection }
+  - { key: Key0, mods: Control, action: ResetFontSize }
+  - { key: Plus, mods: Control, action: IncreaseFontSize }
+  - { key: Equals, mods: Control, action: IncreaseFontSize }
+  - { key: Minus, mods: Control, action: DecreaseFontSize }
   # Vi Mode
-  - {key: Space, mods: Control, mode: Vi, action: ScrollToBottom}
-  - {key: Space, mods: Control, action: ToggleViMode}
-  - {key: I, mode: Vi, action: ScrollToBottom}
-  - {key: I, mode: Vi, action: ToggleViMode}
-  - {key: C, mods: Control, mode: Vi, action: ScrollToBottom}
-  - {key: C, mods: Control, mode: Vi, action: ToggleViMode}
-  - {key: Escape, mode: Vi, action: ClearSelection}
-  - {key: Y, mods: Control, mode: Vi, action: ScrollLineUp}
-  - {key: E, mods: Control, mode: Vi, action: ScrollLineDown}
-  - {key: G, mode: Vi, action: ScrollToTop}
-  - {key: G, mods: Shift, mode: Vi, action: ScrollToBottom}
-  - {key: B, mods: Control, mode: Vi, action: ScrollPageUp}
-  - {key: F, mods: Control, mode: Vi, action: ScrollPageDown}
-  - {key: U, mods: Control, mode: Vi, action: ScrollHalfPageUp}
-  - {key: D, mods: Control, mode: Vi, action: ScrollHalfPageDown}
-  - {key: Y, mode: Vi, action: Copy}
-  - {key: Y, mode: Vi, action: ClearSelection}
-  - {key: V, mode: Vi, action: ToggleNormalSelection}
-  - {key: V, mods: Shift, mode: Vi, action: ToggleLineSelection}
-  - {key: V, mods: Control, mode: Vi, action: ToggleBlockSelection}
-  - {key: V, mods: Alt, mode: Vi, action: ToggleSemanticSelection}
-  - {key: Return, mode: Vi, action: Open}
-  - {key: K, mode: Vi, action: Up}
-  - {key: J, mode: Vi, action: Down}
-  - {key: H, mode: Vi, action: Left}
-  - {key: L, mode: Vi, action: Right}
-  - {key: Up, mode: Vi, action: Up}
-  - {key: Down, mode: Vi, action: Down}
-  - {key: Left, mode: Vi, action: Left}
-  - {key: Right, mode: Vi, action: Right}
-  - {key: Key0, mode: Vi, action: First}
-  - {key: Key4, mode: Vi, action: Last}
-  - {key: Key6, mods: Shift, mode: Vi, action: FirstOccupied}
-  - {key: H, mods: Shift, mode: Vi, action: High}
-  - {key: M, mods: Shift, mode: Vi, action: Middle}
-  - {key: L, mods: Shift, mode: Vi, action: Low}
-  - {key: B, mode: Vi, action: SemanticLeft}
-  - {key: W, mode: Vi, action: SemanticRight}
-  - {key: E, mode: Vi, action: SemanticRightEnd}
-  - {key: B, mods: Shift, mode: Vi, action: WordLeft}
-  - {key: W, mods: Shift, mode: Vi, action: WordRight}
-  - {key: E, mods: Shift, mode: Vi, action: WordRightEnd}
-  - {key: Key5, mods: Shift, mode: Vi, action: Bracket}
-  - {key: Slash, mode: Vi, action: SearchForward}
-  - {key: Slash, mods: Shift, mode: Vi, action: SearchBackward}
-  - {key: N, mode: Vi, action: SearchNext}
-  - {key: N, mods: Shift, mode: Vi, action: SearchPrevious}
+  - { key: Space, mods: Control, mode: Vi, action: ScrollToBottom }
+  - { key: Space, mods: Control, action: ToggleViMode }
+  - { key: I, mode: Vi, action: ScrollToBottom }
+  - { key: I, mode: Vi, action: ToggleViMode }
+  - { key: C, mods: Control, mode: Vi, action: ScrollToBottom }
+  - { key: C, mods: Control, mode: Vi, action: ToggleViMode }
+  - { key: Escape, mode: Vi, action: ClearSelection }
+  - { key: Y, mods: Control, mode: Vi, action: ScrollLineUp }
+  - { key: E, mods: Control, mode: Vi, action: ScrollLineDown }
+  - { key: G, mode: Vi, action: ScrollToTop }
+  - { key: G, mods: Shift, mode: Vi, action: ScrollToBottom }
+  - { key: B, mods: Control, mode: Vi, action: ScrollPageUp }
+  - { key: F, mods: Control, mode: Vi, action: ScrollPageDown }
+  - { key: U, mods: Control, mode: Vi, action: ScrollHalfPageUp }
+  - { key: D, mods: Control, mode: Vi, action: ScrollHalfPageDown }
+  - { key: Y, mode: Vi, action: Copy }
+  - { key: Y, mode: Vi, action: ClearSelection }
+  - { key: V, mode: Vi, action: ToggleNormalSelection }
+  - { key: V, mods: Shift, mode: Vi, action: ToggleLineSelection }
+  - { key: V, mods: Control, mode: Vi, action: ToggleBlockSelection }
+  - { key: V, mods: Alt, mode: Vi, action: ToggleSemanticSelection }
+  - { key: Return, mode: Vi, action: Open }
+  - { key: K, mode: Vi, action: Up }
+  - { key: J, mode: Vi, action: Down }
+  - { key: H, mode: Vi, action: Left }
+  - { key: L, mode: Vi, action: Right }
+  - { key: Up, mode: Vi, action: Up }
+  - { key: Down, mode: Vi, action: Down }
+  - { key: Left, mode: Vi, action: Left }
+  - { key: Right, mode: Vi, action: Right }
+  - { key: Key0, mode: Vi, action: First }
+  - { key: Key4, mode: Vi, action: Last }
+  - { key: Key6, mods: Shift, mode: Vi, action: FirstOccupied }
+  - { key: H, mods: Shift, mode: Vi, action: High }
+  - { key: M, mods: Shift, mode: Vi, action: Middle }
+  - { key: L, mods: Shift, mode: Vi, action: Low }
+  - { key: B, mode: Vi, action: SemanticLeft }
+  - { key: W, mode: Vi, action: SemanticRight }
+  - { key: E, mode: Vi, action: SemanticRightEnd }
+  - { key: B, mods: Shift, mode: Vi, action: WordLeft }
+  - { key: W, mods: Shift, mode: Vi, action: WordRight }
+  - { key: E, mods: Shift, mode: Vi, action: WordRightEnd }
+  - { key: Key5, mods: Shift, mode: Vi, action: Bracket }
+  - { key: Slash, mode: Vi, action: SearchForward }
+  - { key: Slash, mods: Shift, mode: Vi, action: SearchBackward }
+  - { key: N, mode: Vi, action: SearchNext }
+  - { key: N, mods: Shift, mode: Vi, action: SearchPrevious }
 
 mouse:
   # Click settings
@@ -389,8 +389,8 @@ mouse:
   # The `double_click` and `triple_click` settings control the time
   # alacritty should wait for accepting multiple clicks as one double
   # or triple click.
-  double_click: {threshold: 300}
-  triple_click: {threshold: 300}
+  double_click: { threshold: 300 }
+  triple_click: { threshold: 300 }
 
   # If this is `true`, the cursor is temporarily hidden when typing.
   hide_when_typing: true
@@ -415,7 +415,7 @@ mouse:
   # modifiers: Control|Shift
 
 selection:
-  semantic_escape_chars: ",│`|:\"' ()[]{}<>"
+  semantic_escape_chars: ',│`|:"'' ()[]{}<>'
 
   # When set to `true`, selected text will be copied to the primary clipboard.
   save_to_clipboard: true
@@ -436,7 +436,7 @@ selection:
 # All available `mods` and `action` values are documented in the key binding
 # section.
 mouse_bindings:
-  - {mouse: Middle, action: PasteSelection}
+  - { mouse: Middle, action: PasteSelection }
 
 cursor:
   # Cursor style
